trying to work on crouch, might scrap it

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -271,7 +271,7 @@ CapsuleComponent=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Coll
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
 Pistol_C=SkeletalMeshComponent.Collision.Collision
 StaticMeshComponent=StaticMeshComponent.Collision.Collision
-StaticMeshActor=SkeletalMeshComponent.Collision.Collision
+StaticMeshActor=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 SphereComponent=SphereComponent.Collision.Collision
 VRPawn_C=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
 K2Node_VariableGet=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
@@ -282,6 +282,9 @@ CameraComponent=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Colli
 K2Node_CallFunction=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
 PropertyWrapper=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
 K2Node_FormatText=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
+EdGraphNode_Comment=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
+K2Node_Variable=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
+K2Node_CustomEvent=CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Main/Blueprints/Mirror/BP_Mirror.BP_Mirror;
@@ -1012,6 +1015,7 @@ CollisionProfile=True
 
 [DetailCategoriesAdvanced]
 CapsuleComponent.Shape=False
+CapsuleComponent.Collision=True
 
 [ModuleFileTracking]
 StorageServerClient.TimeStamp=2024.02.15-11.38.22
