working on main mechanics

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,7 +132,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+EditorStartupMap=/Game/_Main/Map/Map_Hub.Map_Hub
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -140,8 +140,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+GameInstanceClass=/Game/_Main/GameMode/BP_GI.BP_GI_C
+GameDefaultMap=/Game/_Main/Map/Map_Hub.Map_Hub
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
